[project]
name = "flowise-telegram"
version = "0.1.0"
description = ""
authors = [
    {name = "Alessandro Santini",email = "alessandro.santini@payretailers.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot (>=21.10,<22.0)",
    "flowise (>=1.0.4,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
